--- a/basic_crud_plugins/src/main/resources/application.yaml
+++ b/basic_crud_plugins/src/main/resources/application.yaml
@@ -14,3 +14,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2
